# crewai-workshop-research-team-start

./: README.md
research_team/: .env.example  pyproject.toml  report.md
research_team/src/research_team/: constants.py  crew.py  main.py
